finished but offset not working.
